pod-security-vpol/baseline/restrict-sysctls/e2e/good-resource.yaml
###### Pods - Good
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
spec:
  containers:
  - name: container01
    image: nginx
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod02
spec:
  containers:
  - name: container01
    image: nginx
  securityContext:
    sysctls:
    - name: kernel.shm_rmid_forced
      value: "2"
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod03
spec:
  containers:
  - name: container01
    image: nginx
  securityContext:
    sysctls:
    - name: net.ipv4.ip_local_port_range
      value: "31000    60999"
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod04
spec:
  containers:
  - name: container01
    image: nginx
  securityContext:
    sysctls:
    - name: net.ipv4.ip_unprivileged_port_start
      value: "2048"
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod05
spec:
  containers:
  - name: container01
    image: nginx
  securityContext:
    sysctls:
    - name: net.ipv4.tcp_syncookies
      value: "0"
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod06
spec:
  containers:
  - name: container01
    image: nginx
  securityContext:
    sysctls:
    - name: net.ipv4.ping_group_range
      value: "1   0"
---
apiVersion: v1
kind: Pod
metadata:
  name: goodpod07
spec:
  containers:
  - name: container01
    image: nginx
  securityContext:
    sysctls:
    - name: net.ipv4.ip_unprivileged_port_start
      value: "2048"
    - name: net.ipv4.ping_group_range
      value: "1   0"
---
###### Deployments - Good
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment01
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: nginx
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment02
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: nginx
      securityContext:
        sysctls:
        - name: kernel.shm_rmid_forced
          value: "2"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment03
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: nginx
      securityContext:
        sysctls:
        - name: net.ipv4.ip_local_port_range
          value: "31000    60999"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment04
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: nginx
      securityContext:
        sysctls:
        - name: net.ipv4.ip_unprivileged_port_start
          value: "2048"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment05
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: nginx
      securityContext:
        sysctls:
        - name: net.ipv4.tcp_syncookies
          value: "0"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment06
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: nginx
      securityContext:
        sysctls:
        - name: net.ipv4.ping_group_range
          value: "1   0"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gooddeployment07
spec:
  replicas: 1
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: container01
        image: nginx
      securityContext:
        sysctls:
        - name: net.ipv4.ip_unprivileged_port_start
          value: "2048"
        - name: net.ipv4.ping_group_range
          value: "1   0"
---
###### CronJobs - Good
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob01
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: nginx
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob02
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: nginx
          securityContext:
            sysctls:
            - name: kernel.shm_rmid_forced
              value: "2"
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob03
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: nginx
          securityContext:
            sysctls:
            - name: net.ipv4.ip_local_port_range
              value: "31000    60999"
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob04
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: nginx
          securityContext:
            sysctls:
            - name: net.ipv4.ip_unprivileged_port_start
              value: "2048"
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob05
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: nginx
          securityContext:
            sysctls:
            - name: net.ipv4.tcp_syncookies
              value: "0"
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob06
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: nginx
          securityContext:
            sysctls:
            - name: net.ipv4.ping_group_range
              value: "1   0"
---
apiVersion: batch/v1
kind: CronJob
metadata:
  name: goodcronjob07
spec:
  schedule: "*/1 * * * *"
  jobTemplate:
    spec:
      template:
        spec:
          restartPolicy: OnFailure
          containers:
          - name: container01
            image: nginx
          securityContext:
            sysctls:
            - name: net.ipv4.ip_unprivileged_port_start
              value: "2048"
            - name: net.ipv4.ping_group_range
              value: "1   0"
