pod-security-vpol/baseline/restrict-sysctls/restrict-sysctls.yaml
apiVersion: policies.kyverno.io/v1alpha1
kind: ValidatingPolicy
metadata:
  name: restrict-sysctls
  annotations:
    policies.kyverno.io/title: Restrict sysctls
    policies.kyverno.io/category: Pod Security Standards (Baseline)
    policies.kyverno.io/severity: critical
    policies.kyverno.io/subject: Pod
    kyverno.io/kubernetes-version: "1.22-1.23"
    policies.nirmata.io/remediation-docs: "https://docs.nirmata.io/policysets/podsecurity/baseline/restrict-sysctls/"
    policies.kyverno.io/description: >-
      Sysctls can disable security mechanisms or affect all containers on a
      host, and should be disallowed except for an allowed "safe" subset. A
      sysctl is considered safe if it is namespaced in the container or the
      Pod, and it is isolated from other Pods or processes on the same Node.
      This policy ensures that only those "safe" subsets can be specified in
      a Pod. The field spec.securityContext.sysctls must be unset or not use any other names
      than kernel.shm_rmid_forced, net.ipv4.ip_local_port_range,
      net.ipv4.ip_unprivileged_port_start, net.ipv4.tcp_syncookies, and
      net.ipv4.ping_group_range.
spec:
  validationActions: [Audit]
  evaluation:
    background:
      enabled: true
  matchConstraints:
    resourceRules:
      - apiGroups: [""]
        apiVersions: ["v1"]
        resources: ["pods"]
        operations: ["CREATE", "UPDATE"]
  variables:
    - name: allowedSysctls
      expression: >-
        ['kernel.shm_rmid_forced', 'net.ipv4.ip_local_port_range', 'net.ipv4.ip_unprivileged_port_start',
         'net.ipv4.tcp_syncookies', 'net.ipv4.ping_group_range']
  validations:
    - expression: >-
        !has(object.spec.securityContext) || 
        !has(object.spec.securityContext.sysctls) || 
        object.spec.securityContext.sysctls.all(sysctl, 
          sysctl.name in variables.allowedSysctls)
      message: >-
        Setting additional sysctls beyond the allowed list is disallowed.
        Only the following are permitted:
        kernel.shm_rmid_forced,
        net.ipv4.ip_local_port_range,
        net.ipv4.ip_unprivileged_port_start,
        net.ipv4.tcp_syncookies,
        net.ipv4.ping_group_range.
